[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-runner"
version = "0.1.0"
description = "Clean subprocess wrapper for claude -p CLI invocations"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Nikita Kosmodamianskii", email = "nik_kosmo@proton.me"},
]

[project.urls]
Repository = "https://github.com/nikkosmo/claude-runner"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
